# whisper-dictate

./: .gitignore  CHANGELOG.md  README.md  benchmark.py  check_ibus_only.py  desktop_actions.py  dictate.py  dictate_runtime.py  dictatectl.py  ibus-input-implementation-plan.md  ibus_engine.py  install.py  install.sh  kglobal_hotkey.py  mic_realtime.py  prepare_model.py  ptt-press.sh  ptt-release.sh  pyproject.toml  requirements.txt  reset-kdictate-install.sh  runtime_profile.py  todo.md  toggle.sh  transcribe.py  whisper-dictate-hotkey.service  whisper-dictate.service
docs/: architecture-ibus.md  dbus-orchestration.md  future.md  gpu-mode.md
eval/: TODO.md  distil_medium_exhaustive.py  evaluate.py  harness.py  sweep.py  verbose_benchmark.py
kdictate/: __init__.py  app_metadata.py  audio_common.py  backend.py  config.py  constants.py  daemon_profiles.py  exceptions.py  logging_utils.py  runtime.py  runtime_profile.py
packaging/: 60-kdictate-ibus.conf  60-whisper-dictate-ibus.conf  ibus-engine-kdictate.sh  ibus-engine-whisper-dictate.sh  io.github.pizzimenti.KDictate.component.xml  io.github.pizzimenti.KDictate.service  io.github.pizzimenti.KDictate.xml  io.github.pizzimenti.KDictateHud.desktop  io.github.pizzimenti.KDictateToggle.desktop  io.github.pizzimenti.WhisperDictate.component.xml  io.github.pizzimenti.WhisperDictate.service  io.github.pizzimenti.WhisperDictate.xml  io.github.pizzimenti.WhisperDictateToggle.desktop  kdictate-systemd.service  whisper-dictate-plasma-wayland.sh
scripts/: check-ibus-only.sh
systemd/: io.github.pizzimenti.KDictate.service  (+1 more)
(+149 files in other folders)
