[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kdictate"
version = "0.4.0"
description = "Local Whisper dictation for KDE Plasma Wayland via IBus"
authors = [{name = "Bradley Pizzimenti"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
kdictate-daemon = "kdictate.core.daemon:main"
kdictatectl = "kdictate.cli.dictatectl:main"
ibus-engine-kdictate = "kdictate.ibus_engine.main:main"

[tool.setuptools.packages.find]
include = ["kdictate*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
